--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
     "react": "^18.2.0",
+    "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^18.2.0",
     "react-grid-layout": "^1.4.4",
     "react-hook-form": "^7.49.2",
